<resources>
    <string name="app_name">Dexterity</string>
    <string name="setup_name_hint">Name</string>
    <string name="new_post_btn_hint">Post</string>

    <string name="Title_txt">Dexterity</string>
    <string name="create_acc_txt">Create new account</string>
    <string name="pass_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_logo_desc"> Login Page</string>
    <string name="login_btn_text">Login</string>
    <string name="login_reg_btn_text">Create new account</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new account</string>
    <string name="reg_login_text">Already have an account</string>
    <string name="reg_pass_text">Password</string>
    <string name="reg_confirm_pass_text">Confirm Password</string>

    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text"> Name</string>
    <string name="setup_btn_name_text">Save </string>
    <string name="post_desc_hint">Add Description</string>

    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Chat</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_txt">Notifications</string>


</resources>
